--- a/JSONPage3.html
+++ b/JSONPage3.html
@@ -1,10 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<title>Javascript Exercises - 2-3-2017</title>
+	<title>JSON Exercises - 2-14-2017</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-	<link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <!--JQuery import-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" language="javascript" src="users.json"></script>
     <script type="text/javascript">
    $(document).ready(function(e) {
@@ -16,7 +18,7 @@
 	<div class="bg"></div>
 <div class="jumbotron">
 	<div class="container title-container">
-		<h1>Javascript Exercises</h1>
+		<h1>JSON Exercises</h1>
 		<p class="lead">These exercises were completed February 14th, 2017</p>
 	</div>
 </div>
