--- a/JSONPAge1.html
+++ b/JSONPAge1.html
@@ -48,7 +48,8 @@
 	</div>
 </div>
 <div class="container content-container">
-    <button class="btn-primary" id="get-data">Get JSON data</button>
+    <h1>This page will display basic information on all users when the button is clicked.</h1>
+    <button class="btn-primary" id="get-data">Get user data</button>
     <div id="show-data"></div>
 </div>
 </body>
