--- a/JSONPage2.html
+++ b/JSONPage2.html
@@ -43,7 +43,7 @@
         </div>
     </div>
 <div class="container content-container">
-    <h1>Search by User ID</h1>
+    <h1>Search by User ID. Click the button below to find a user in the JSON data that matches a specific user ID value.</h1>
     <input type="text" name="UserId" onfocus="if (this.value == 'Enter User ID Here') { this.value = ''; }" value="Enter User ID Here" id="useridinput">
     <button class="btn-primary" id="get-data">Get User data</button>
     <div id="show-data"></div>
