--- a/JSONPAge1.html
+++ b/JSONPAge1.html
@@ -40,12 +40,24 @@
     </script>
 </head>
 <body>
-	<div class="bg"></div>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">JSON Exercises</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li><a href="JSONPage1.html" class="active">Page 1</a></li>
+                <li><a href="JSONPage2.html">Page 2</a></li>
+                <li><a href="JSONPage3.html">Page 3</a></li>
+            </ul>
+        </div>
+    </nav>
+<div class="bg"></div>
 <div class="jumbotron">
-	<div class="container title-container">
-		<h1>JSON Exercises</h1>
-		<p class="lead">These exercises were completed February 14th, 2017</p>
-	</div>
+    <div class="container title-container">
+        <h1>JSON Exercises</h1>
+        <p class="lead">These exercises were completed February 14th, 2017</p>
+    </div>
 </div>
 <div class="container content-container">
     <h1>This page will display basic information on all users when the button is clicked.</h1>
