--- a/JSONPage3.html
+++ b/JSONPage3.html
@@ -38,18 +38,30 @@
     </script>
 </head>
 <body>
-    <div class="bg"></div>
-    <div class="jumbotron">
-        <div class="container title-container">
-            <h1>JSON Exercises</h1>
-            <p class="lead">These exercises were completed February 14th, 2017</p>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">JSON Exercises</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li><a href="JSONPage1.html">Page 1</a></li>
+                <li><a href="JSONPage2.html">Page 2</a></li>
+                <li><a href="JSONPage3.html" class="active">Page 3</a></li>
+            </ul>
         </div>
+    </nav>
+<div class="bg"></div>
+<div class="jumbotron">
+    <div class="container title-container">
+        <h1>JSON Exercises</h1>
+        <p class="lead">These exercises were completed February 14th, 2017</p>
     </div>
-    <div class="container content-container">
-        <h1>Search by User name. Click the button below to find a user in the JSON data that matches a specific user name value.</h1>
-        <input type="text" name="UserId" onfocus="if (this.value == 'Enter User Name Here') { this.value = ''; }" value="Enter User Name Here" id="usernameinput">
-        <button class="btn-primary" id="get-data">Get User data</button>
-        <div id="show-data"></div>
-    </div>
+</div>
+<div class="container content-container">
+    <h1>Search by User name. Click the button below to find a user in the JSON data that matches a specific user name value.</h1>
+    <input type="text" name="UserId" onfocus="if (this.value == 'Enter User Name Here') { this.value = ''; }" value="Enter User Name Here" id="usernameinput">
+    <button class="btn-primary" id="get-data">Get User data</button>
+    <div id="show-data"></div>
+</div>
 </body>
 </html>
